feat: create role

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,4 +6,7 @@ register.name.null=Provide a name!
 register.name.one.null=Provide %1$s!
 register.name.syntax=%1$s syntax error, please provide a correct name!
 
-register.userCode.overflow = "Failed to generate userCode: maximum limit reached."
+register.userCode.overflow=Failed to generate userCode: maximum limit reached.
+register.roleId.used=roleId has already been registered!
+register.roleId.overflow=roleId exceeds maximum limit!
+register.roleId.negative=roleId cannot be negative!
