--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,6 +7,9 @@ register.name.one.null=Provide %1$s!
 register.name.syntax=%1$s syntax error, please provide a correct name!
 
 register.userCode.overflow=Failed to generate userCode: maximum limit reached.
+register.roleId.null=rovide an roleId!
+register.roleId.nonexistent=roleId does not exists!
+register.roleName.null=Provide anroleName!
 register.roleId.used=roleId has already been registered!
 register.roleId.overflow=roleId exceeds maximum limit!
 register.roleId.negative=roleId cannot be negative!
