--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -7,6 +7,9 @@ register.name.one.null=Informe um %1$s!
 register.name.syntax=Erro de sintaxe em %1$s, informe um nome valido!
 
 register.userCode.overflow=Falha ao gerar userCode: limite maximo atingido.
+register.roleId.null=Informe um roleId!
+register.roleId.nonexistent=roleId nao existe!
+register.roleName.null=Informe um roleName!
 register.roleId.used=roleId informado ja foi cadastrado!
 register.roleId.overflow=roleId ultrapassou o limite maximo!
 register.roleId.negative=roleId nao pode ser negativo!
