--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -7,6 +7,7 @@ register.name.one.null=Informe um %1$s!
 register.name.syntax=Erro de sintaxe em %1$s, informe um nome valido!
 
 register.userCode.overflow=Falha ao gerar userCode: limite maximo atingido.
+register.userCode.nonexistent=userCode nao existe!
 register.roleId.null=Informe um roleId!
 register.roleId.nonexistent=roleId nao existe!
 register.roleName.null=Informe um roleName!
