--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -1,16 +1,16 @@
 register.email.null=Informe um email!
-register.email.syntax=Erro de sintaxe, informe um email valido!
-register.email.used=Email informado ja foi cadastrado!
+register.email.syntax=Erro de sintaxe, informe um email válido!
+register.email.used=Email informado já foi cadastrado!
 
 register.name.null=Informe um nome!
 register.name.one.null=Informe um %1$s!
-register.name.syntax=Erro de sintaxe em %1$s, informe um nome valido!
+register.name.syntax=Erro de sintaxe em %1$s, informe um nome válido!
 
-register.userCode.overflow=Falha ao gerar userCode: limite maximo atingido.
-register.userCode.nonexistent=userCode nao existe!
+register.userCode.overflow=Falha ao gerar userCode: limite máximo atingido.
+register.userCode.nonexistent=userCode não existe!
 register.roleId.null=Informe um roleId!
-register.roleId.nonexistent=roleId nao existe!
+register.roleId.nonexistent=roleId não existe!
 register.roleName.null=Informe um roleName!
-register.roleId.used=roleId informado ja foi cadastrado!
-register.roleId.overflow=roleId ultrapassou o limite maximo!
-register.roleId.negative=roleId nao pode ser negativo!
+register.roleId.used=roleId informado já foi cadastrado!
+register.roleId.overflow=roleId ultrapassou o limite máximo!
+register.roleId.negative=roleId não pode ser negativo!
